RESOLVED FIXED 104089
REGRESSION(r136615): Incorrect style sharing in view-source documents.
https://bugs.webkit.org/show_bug.cgi?id=104089
Summary REGRESSION(r136615): Incorrect style sharing in view-source documents.
Takashi Sakamoto
Reported 2012-12-04 22:18:30 PST
The following layout test is failing on Linux and Mac, fast/frames/viewsource-attribute.html fast/frames/viewsource-on-image-file.html Probable cause: This is probably caused by a patch filed on http://webkit.org/b/103925. Looking at fast/frames/viewsource-attribute.html, the following TDs share the same style: TD 0x7fffea86a300 CLASS=webkit-line-number TD 0x7fffea86a680 CLASS=webkit-line-content .webkit-line-number has "counter" for showing line numbers, but .webkit-line-content doesn't have "counter". + RenderTableCell {TD} at (76,0) size 224x12 [color=#808080] [bgcolor=#F0F0F0] [border: none (1px solid #BBBBBB) none] [r=0 c=1 rs=1 cs=1] + RenderInline (generated) at (0,0) size 5x12 + RenderCounter at (138,0) size 5x12 + text run at (138,0) width 5: "2" + RenderInline {SPAN} at (0,0) size 15x12 One more RenderCounter is generated. I guess, other differences would come from the same reason, styles, which cannot be shared, are shared.
Attachments
Patch (3.06 KB, patch)
2012-12-05 01:49 PST, Andreas Kling
koivisto: review+
kling: commit-queue-
Andreas Kling
Comment 1 2012-12-05 01:49:28 PST
Mike West
Comment 2 2012-12-05 02:47:34 PST
Skipped in r136662: <http://trac.webkit.org/changeset/136662> and r136643 <http://trac.webkit.org/changeset/136643>. Would you mind removing it from the TestExpectations files when you land the change? Thanks!
Antti Koivisto
Comment 3 2012-12-05 11:25:39 PST
Comment on attachment 177699 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=177699&action=review > Source/WebCore/ChangeLog:12 > + Tests: fast/frames/viewsource-attribute.html > + fast/frames/viewsource-on-image-file.html I don't see any tests.
Andreas Kling
Comment 4 2012-12-05 11:32:09 PST
Note You need to log in before you can comment on or make changes to this bug.