REGRESSION(r136615): Incorrect style sharing in view-source documents. <http://webkit.org/b/104089>

Reviewed by Antti Koivisto.

Source/WebCore:

Make sure we collect feature data about the default view-source style sheet before evaluating
style sharing candidates, otherwise it won't know which class selectors to care about.

* css/StyleResolver.cpp:
(WebCore::StyleResolver::collectFeatures):

LayoutTests:

Unskip: fast/frames/viewsource-attribute.html
        fast/frames/viewsource-on-image-file.html

* platform/chromium/TestExpectations:
* platform/efl/TestExpectations:
* platform/gtk/TestExpectations:
* platform/mac/TestExpectations:
* platform/qt/TestExpectations:

Canonical link: https://commits.webkit.org/122304@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136722 268f45cc-cd09-0410-ab3c-d52691b4dbfc